# matrix

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  cgo_prebuilt.go  cgo_source.go  cgo_source.go.in  decompose.go  decompose_test.go  gemm.go  gemm_test.go  gemv.go  gemv_test.go  go.mod  go.sum  matrix.go  solve.go  solve_test.go  transpose.go  transpose_test.go  tridiag.go  vector_ops.go  vector_ops_test.go
.github/: sanitizers.cmake
.github/workflows/: main.yml
benchmarks/: CMakeLists.txt  bench_decompose.c  bench_gemm.c  bench_gemv.c  bench_main.c  bench_matrix.c  bench_solve.c  bench_transpose.c  bench_tridiag.c  bench_vector_ops.c
cmake/: finkit-matrixConfig.cmake.in  sanitizers.cmake
include/: decompose.h  gemm.h  gemv.h  matrix.h  matrix_internal.h  solve.h  transpose.h  tridiag.h
scripts/: build.sh  coverage.sh  run_benchmarks.sh  test_coverage.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_decompose.c  test_framework.c  test_framework.h  test_gemm.c  test_gemv.c  test_main.c  test_matrix.c  test_precision.c  test_solve.c  test_transpose.c  test_tridiag.c  test_vector_ops.c
